# libKinovaGen3

./: .gitignore  CMakeLists.txt  README.md
include/: KinovaGen3.h
src/: KinovaGen3.cpp
test/: testLibrary.cpp
